--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,8 +1,17 @@
 /*
   Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+  здесь окажутся стили,*/
+:root {
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --button-color: #ff0070;
+  --text-color: #f1b2ce;
+  --header-color-title: #db00ff;
+  --article-text-color: #000028;
+  --article-title-text-color: #ff0070;
+  --outline-color: rgba(255, 0, 112, 0.4);
+  --bg-image: url(../images/cover-image-dark.png);
+}
 
 :root.theme-dark {
   /* сохраните этот селектор в приведённом виде.
