--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,42 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --button-color: #353430;
+  --article-title-text-color: #353430;
+  --header-color-title: #ffc2e6;
+  --article-text-color: #353430;
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --text-color-title: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --outline-color: rgba(50, 49, 45, 0.4);
+  --bg-image: url(../images/cover-image-light.png);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* Дублируем переменные светлой темы */
+    --button-color: #353430;
+    --article-title-text-color: #353430;
+    --header-color-title: #ffc2e6;
+    --article-text-color: #353430;
+    --bg-color: #fff1f7;
+    --text-color: #353430;
+    --text-color-title: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --outline-color: rgba(50, 49, 45, 0.4);
+    --bg-image: url(../images/cover-image-light.png);
+  }
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+.theme-light .header__pseudo-element::before {
+  display: none;
+}
+
+.theme-light .header__pseudo-element::after {
+  display: none;
 }
