--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: var(--main-font), monospace;
   min-inline-size: 375px;
@@ -30,7 +30,7 @@ ul {
   list-style: none;
 }
 
-picture {
+img, picture {
   margin: 0;
   padding: 0;
 }
