--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,6 +12,7 @@
   --article-text-color: #000028;
   --article-title-text-color: #ff0070;
   --outline-color: rgba(255, 0, 112, 0.4);
+  --pseudo-color: #ff0070;
   --bg-image: url(../images/cover-image-dark.png);
   --outer-padding: 10px;
   --section-gap: 50px;
