--- a/styles/dark.css
+++ b/styles/dark.css
@@ -6,6 +6,7 @@
   --accent-color: #ff0070;
   --button-color: #ff0070;
   --text-color: #f1b2ce;
+  --pseudo-color: #ff0070;
   --header-color-title: #db00ff;
   --article-text-color: #000028;
   --article-title-text-color: #ff0070;
@@ -17,6 +18,3 @@
   */
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-}
