--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@
   top: 9px;
   right: 38px;
   display: block;
-  color: var(--accent-color);
+  color: var(--pseudo-color);
   font-weight: 400;
   font-size: 18px;
   line-height: 139%;
@@ -65,8 +65,8 @@
   top: 17px;
   right: 19px;
   border-radius: 50%;
-  box-shadow: 0px 0px 4px 2px var(--accent-color);
-  background: var(--accent-color);
+  box-shadow: 0px 0px 4px 2px var(--pseudo-color);
+  background: var(--pseudo-color);
   inline-size: 9px;
   block-size: 9px;
 }
